# polymarket-mispricing-engine

./: .env  .gitignore  Cargo.toml  README.md
.github/workflows/: research_pipeline.yml  rust_ingestion.yml  vercel_dashboard.yml
docs/: architecture.md
migrations/: 001_dedupe_and_constraints.sql
research_engine/: README.md  api_server.py  backfill_history.py  backtest.py  candidates.py  config.py  db.py  discovery.py  explanations.py  graph.py  hypothesis.py  models.py  pyproject.toml  run_api_server.py  run_backfill_history.py  run_backtest.py  run_graph.py  run_optimize_backtest.py  signals.py  statistics.py  summary.py  validation.py
research_engine/static/: dashboard.html
rust_engine/: .env.example  Cargo.toml  README.md
rust_engine/src/: arbitrage.rs  database.rs  domains.rs  fetcher.rs  main.rs  models.rs  parser.rs  relationships.rs  resolver.rs
scripts/: run_pipeline.sh
sql/: schema.sql
sql/migrations/: 001_dedupe_and_constraints.sql  002_market_ids.sql  003_cleanup_demo_signals.sql  004_market_domain.sql  005_relationship_strength.sql  006_edge_statistics.sql  007_market_graph_metrics.sql  008_signal_confidence.sql  009_backtest.sql  010_clob_tokens_and_history_index.sql  011_candidate_relationships_and_edge_dynamics.sql  012_discovery_source.sql
src/: database.rs  http_client.rs  main.rs  models.rs  normalizer.rs
vercel_app/: .env.example  README.md  index.html  package-lock.json  package.json  vercel.json
vercel_app/api/: candidates.js  domains.js  health.js  overview.js  signals.js
vercel_app/lib/: db.js
(+2 files in other folders)
