[package]
name = "polymarket_scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }

reqwest = { version = "0.12", features = ["json"] }

serde = { version = "1", features = ["derive"] }

serde_json = "1"

rust_decimal = { version = "1", features = ["serde"] }

dotenvy = "0.15"

sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "rust_decimal"
] }