[project]
name = "research-engine"
version = "0.1.0"
description = "Python research layer for the Polymarket mispricing engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "pandas>=2.0",
    "networkx>=3.0",
    "numpy>=2.0",
]
